[project]
name = "gpu-session"
version = "0.1.0"
description = "CLI tool to provision GPU sessions on RunPod for LLM inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "runpod>=1.2.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
gpu-session = "gpu_session.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpu_session"]
